# F1-telemetry-comparisons

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/src/fast_f1_backend/: __init__.py  __main__.py  config.py  main.py  runner.py  serializers.py
backend/src/fast_f1_backend/api/: routes.py
backend/src/fast_f1_backend/services/: fastf1_service.py
backend/tests/: test_app.py  test_serializers.py
frontend/: .env.example  Dockerfile  fly.toml  index.html  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: DriverTable.tsx  Header.tsx  Sidebar.tsx  SortableItem.tsx
frontend/src/components/overview/: OverviewView.tsx
frontend/src/components/telemetry/: PitStopChart.tsx  PositionChart.tsx  RaceGapChart.tsx  TelemetryChannel.tsx  TelemetryView.tsx  TrackMap.tsx  TrackStatusChart.tsx  WeatherChart.tsx
frontend/src/components/trackmap/: TrackCanvas.tsx  TrackMapView.tsx
frontend/src/hooks/: useCorners.ts  useEvents.ts  useLaps.ts  useResults.ts  useTelemetry.ts  useTrackStatus.ts  useWeather.ts
frontend/src/types/: api.ts
frontend/src/utils/: colors.ts  telemetryMath.ts
scripts/: sync_cache.py
