[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fast-f1-backend"
version = "0.1.0"
description = "Minimal FastAPI backend for Formula 1 metrics powered by Fast-F1"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "fastf1>=3.4,<4.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
]

[project.scripts]
fast-f1-backend = "fast_f1_backend.runner:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
